--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="../lead/OIP.webp" alt="SDG11アイコン" class="sdg-icon">
+            <img src="OIP.webp" alt="SDG11アイコン" class="sdg-icon">
             <h1>持続可能な開発目標11<br>住み続けられるまちづくりを</h1>
             <p>都市と人間の居住地を包摂的、安全、強靭かつ持続可能にする</p>
         </div>
